Change text and method for dont load second img

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,6 +40,14 @@ h1, h2,h3 {
   margin-top: 15px;
  } 
 
+ .gif-enamorado-occult{
+  height: auto;
+  width: auto;
+  margin: auto;
+  margin-top: 15px;
+  display: none;
+ }
+
 @font-face {
   font-family: 'Valentine';
   src: url('../app/fonts/Valentine\ Cute.ttf');
